hphp/hack/test/typecheck/reactive/owned_mutable3.php
<?hh // partial
class A {
  // ERROR
  <<__Rx>>
  public function f(<<__Mutable, __OwnedMutable>> $x): void {
  }
}
